--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@ WITH 6+ YEARS EXPERIENCE IN GRAPHIC DESIGNING & WEB DEVELOPMENT WITH 400+ PROJEC
               </div>
             </div>
             <!-- post #1 -->
-            <div class="crsl-item"><img style="width:200px;height:200px;" src="s.jpg" alt="person 2">
+            <div class="crsl-item"><img style="width:200px;height:200px;" src="y.jpg" alt="person 2">
               <div class="templatemo_team_name">Sourov Adhikary</div>
               <div class="templatemo_team_post">Director</div>
               <div class="templatemo_social">
@@ -255,7 +255,7 @@ WITH 6+ YEARS EXPERIENCE IN GRAPHIC DESIGNING & WEB DEVELOPMENT WITH 400+ PROJEC
               </div>
             </div>
             <!-- post #2 -->
-            <div class="crsl-item"><img style="width:200px;height:200px;" src="z1.jpg" alt="person 3">
+            <div class="crsl-item"><img style="width:200px;height:200px;" src="y.jpg" alt="person 3">
               <div class="templatemo_team_name">Arafat Hossain</div>
               <div class="templatemo_team_post">New Manager</div>
               <div class="templatemo_social">
@@ -268,7 +268,7 @@ WITH 6+ YEARS EXPERIENCE IN GRAPHIC DESIGNING & WEB DEVELOPMENT WITH 400+ PROJEC
               </div>
             </div>
             <!-- post #3 -->
-            <div class="crsl-item"><img style="width:200px;height:200px;" src="z3.jpg" alt="person 4">
+            <div class="crsl-item"><img style="width:200px;height:200px;" src="y.jpg" alt="person 4">
               <div class="templatemo_team_name">Rudra Roy</div>
               <div class="templatemo_team_post">Designer</div>
               <div class="templatemo_social">
@@ -281,7 +281,7 @@ WITH 6+ YEARS EXPERIENCE IN GRAPHIC DESIGNING & WEB DEVELOPMENT WITH 400+ PROJEC
               </div>
             </div>
             <!-- post #4 -->
-            <div class="crsl-item"><img style="width:200px;height:200px;" src="y5.jpg" alt="person 5">
+            <div class="crsl-item"><img style="width:200px;height:200px;" src="y.jpg" alt="person 5">
               <div class="templatemo_team_name">Sujon kumar</div>
               <div class="templatemo_team_post">Developer</div>
               <div class="templatemo_social">
@@ -294,7 +294,7 @@ WITH 6+ YEARS EXPERIENCE IN GRAPHIC DESIGNING & WEB DEVELOPMENT WITH 400+ PROJEC
               </div>
             </div>
             <!-- post #5 -->
-            <div class="crsl-item"><img style="width:200px;height:200px;" src="y6.jpg" alt="person 6">
+            <div class="crsl-item"><img style="width:200px;height:200px;" src="y.jpg" alt="person 6">
               <div class="templatemo_team_name">Mira Dev</div>
               <div class="templatemo_team_post">Technical Staff</div>
               <div class="templatemo_social">
